fixed modal z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,8 @@ $navbar-dropdown-background-color: $secondary;
 
 $custom-colors: ("secondary": ($secondary, $secondary-invert));
 
+$modal-z: 200;
+
 @import "../node_modules/bulma/bulma";
 @import "../node_modules/bulma-divider/dist/css/bulma-divider";
 @import "../node_modules/bulma-checkradio/dist/css/bulma-checkradio";
